Fix first heading overflow (fixed #14)

--- a/resources/screen.css
+++ b/resources/screen.css
@@ -174,6 +174,7 @@ aside a:not(.disabled) {
 .mw-body-content h1,
 .firstHeading {
   font-size: 1.6rem;
+  word-wrap: break-word;
 }
 
 .mw-body-content h2 {
